{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 38,
  "lineage": "a1f9e636-8b28-9d7e-3593-bcb85fe7237d",
  "resources": [
    {
      "module": "module.rds-aurora-postresql",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:494724829840:security-group/sg-0150deecf2a813ec2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0150deecf2a813ec2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From allowed SGs",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-ec903fb0"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-postgresql-20211019124438858800000001",
            "name_prefix": "rds-postgresql-",
            "owner_id": "494724829840",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aurora-rds-postgresql",
              "dev": "true"
            },
            "tags_all": {
              "Name": "aurora-rds-postgresql",
              "dev": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-2342235b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.rds-aurora-postresql",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "From allowed SGs",
            "from_port": 5432,
            "id": "sgrule-2824152590",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0150deecf2a813ec2",
            "self": false,
            "source_security_group_id": "sg-ec903fb0",
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds-aurora-postresql.aws_db_subnet_group.this",
            "module.rds-aurora-postresql.aws_rds_cluster.this",
            "module.rds-aurora-postresql.aws_security_group.this",
            "module.rds-aurora-postresql.random_id.snapshot_identifier",
            "module.rds-aurora-postresql.random_password.master_password"
          ]
        }
      ]
    }
  ]
}